@@ -47,7 +47,9 @@ gdb_test_multiple "python print 23" "verify python support" {
 
       # If Python is not supported, verify that sourcing a python script
       # causes an error.
-      gdb_test "source $srcdir/$subdir/source2.py" "Error in sourced command file:.*"
+      gdb_test "source $srcdir/$subdir/source2.py" \
+	  "Error in sourced command file:.*" \
+	  "source source2.py when python disabled"
       return -1
     }
     -re "$gdb_prompt $"	{}
@@ -73,7 +75,7 @@ gdb_py_test_multiple "indented multi-line python command" \
   "foo ()" "" \
   "end" "hello, world!"
 
-gdb_test "source $srcdir/$subdir/source2.py" "yes"
+gdb_test "source $srcdir/$subdir/source2.py" "yes" "source source2.py"
 
 gdb_test "python print gdb.current_objfile()" "None"
 gdb_test "python print gdb.objfiles()" "\\\[\\\]"
