@@ -1,3 +1,9 @@
+2011-10-18  Tom Tromey  <tromey@redhat.com>
+
+	* gdb.base/source.exp: Don't include full file name in test name.
+	* gdb.python/python.exp: Don't include full file name in test
+	name.
+
 2011-10-18  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* gdb.base/attach-pie-noexec.c: New files.
